Fix compilation on windows and 2026.1 commpatibility issues.